resolve alguns problemas de contraste no css

--- a/src/Components/Game/styles.css
+++ b/src/Components/Game/styles.css
@@ -32,6 +32,7 @@
 }
 
 .timer {
+  background-color: rgba(165, 44, 44, 0.678);
   color: white;
   font-size: 30px;
   margin: 5px;
@@ -39,10 +40,11 @@
 }
 
 .question-category {
+  background-color: rgba(165, 44, 44, 0.678);
   color: white;
   font-size: 20px;
   margin: 5px;
-  margin-left: 10px;
+  margin-left: 20px;
 }
 
 .game-section {
